# BSRN_Project

./: CMakeLists.txt  README.md  UDPClient.c  UDPServer.c  main  main.c  mainMenu  network.c  pcapForTCP  pcapForTCP.c  pcapForUDP  pcapForUDP.c
Abgabe/BSRN_Alternative5_AK_MA_TG/: mainMenu.c  pcapForTCP.c  pcapForUDP.c
Abgabe/BSRN_Alternative5_AK_MA_TG/TCP/: TCPClient  TCPClient.c  TCPServer.c
CLI-Ideen/: CLITest1.c
TCP/: TCPClient  TCPClient.c  TCPServer  TCPServer.c
UDP/: UDPClient  UDPClient.c  UDPServer  UDPServer.c
